# faraway

./: .gitignore  README.md  download_model.sh  pyproject.toml
faraway/: cards.py  inference_pipeline.py  post_processor.py
faraway/dev/: faraway_cards.csv  prepare_dataset.py  utils.py
faraway/train/: augmented_and_split_dataset.py  coco_dataset.py  train_v2.py
