[project]
name = "faraway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "albumentations>=2.0.8",
    "ipykernel>=7.0.1",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.10.0.84",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "pytorch-lightning>=2.5.5",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "supervision>=0.26.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
